# nmesh

./: .env  .gitignore  Dockerfile  Makefile  README.md  config.yml  docker.sh  main.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-image.yml
docker/sandbox/: Dockerfile
docker/vanilla/: Dockerfile
nmesh/: __init__.py  functional.py  nmesh.py
nmesh/core/: functional.py  nmesh.py
nmesh/cp/: __main__.py
scripts/: build
