[metadata]
name = nmesh
version = attr: nmesh.__version__
author = CADIC Jean Maximilien
author_email = contact@cadic.jp
url = https://github.com/JeanMaximilienCadic/nmesh
description = 3D Mesh processing
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 3D mesh, point cloud
classifiers =
License :: OSI Approved :: MIT License
Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = pyYaml
    opencv-python
    scipy
    trimesh
    gnutools-python
    numpy
    matplotlib
    pandas
    networkx
    pyglet==1.5.27
    pmeshlab
    black

[options.package_data]
* = *.yml
